# competition

c++/practice/: CMakeLists.txt  main.cpp  testClass.cpp  testClass.h
c++/section1.1/: CMakeLists.txt  main.cpp
c++/section1.1/Submitting_Solutions/: Submitting_Solutions.cpp  Submitting_Solutions.h
contest1b/: badmilk.java  paint.java  speeding.java  speeding1.in
contest1s/: bcount.java  highcard.java  highcard2.java  highcard3.java
gift/: gift1.java
ride/: ride.java
